# skillsstore

./: .gitignore  README.md  brew_requirements.txt  ollama_requirements.txt  package.json  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/native_libs/: libgomp.dylib
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/rag/: embedder.rs  faiss.rs  mod.rs
src/components/: UploadButton.tsx
src/components/custom/: UploadButton.tsx
src/store/: atoms.tsx
